--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,18 @@
 {
     "files.associations": {
-        "deque": "cpp",
-        "string": "cpp",
-        "vector": "cpp",
         "any": "cpp",
         "array": "cpp",
+        "fstream": "cpp",
+        "future": "cpp",
+        "optional": "cpp",
+        "shared_mutex": "cpp",
+        "sstream": "cpp",
+        "thread": "cpp",
+        "tuple": "cpp",
+        "variant": "cpp",
+        "cmath": "cpp",
+        "complex": "cpp",
+        "random": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
         "*.tcc": "cpp",
@@ -15,10 +23,11 @@
         "chrono": "cpp",
         "cinttypes": "cpp",
         "clocale": "cpp",
-        "cmath": "cpp",
         "codecvt": "cpp",
-        "complex": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
         "condition_variable": "cpp",
+        "coroutine": "cpp",
         "csetjmp": "cpp",
         "csignal": "cpp",
         "cstdarg": "cpp",
@@ -31,12 +40,14 @@
         "cuchar": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
+        "deque": "cpp",
         "forward_list": "cpp",
         "list": "cpp",
         "map": "cpp",
         "set": "cpp",
         "unordered_map": "cpp",
         "unordered_set": "cpp",
+        "vector": "cpp",
         "exception": "cpp",
         "algorithm": "cpp",
         "functional": "cpp",
@@ -44,17 +55,13 @@
         "memory": "cpp",
         "memory_resource": "cpp",
         "numeric": "cpp",
-        "optional": "cpp",
-        "random": "cpp",
         "ratio": "cpp",
         "regex": "cpp",
+        "string": "cpp",
         "string_view": "cpp",
         "system_error": "cpp",
-        "tuple": "cpp",
         "type_traits": "cpp",
         "utility": "cpp",
-        "fstream": "cpp",
-        "future": "cpp",
         "initializer_list": "cpp",
         "iomanip": "cpp",
         "iosfwd": "cpp",
@@ -63,23 +70,16 @@
         "limits": "cpp",
         "mutex": "cpp",
         "new": "cpp",
+        "numbers": "cpp",
         "ostream": "cpp",
+        "ranges": "cpp",
         "scoped_allocator": "cpp",
-        "shared_mutex": "cpp",
-        "sstream": "cpp",
+        "span": "cpp",
         "stdexcept": "cpp",
+        "stop_token": "cpp",
         "streambuf": "cpp",
-        "thread": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp",
-        "variant": "cpp",
-        "compare": "cpp",
-        "concepts": "cpp",
-        "coroutine": "cpp",
-        "numbers": "cpp",
-        "ranges": "cpp",
-        "span": "cpp",
-        "stop_token": "cpp"
+        "valarray": "cpp"
     }
 }
